# 10_Site

./: .gitignore  Dockerfile  docker-compose.yml
new_www/: .env-sample  README.md  chce_postgres_backup.sh  docker-entrypoint.sh  pyproject.toml
new_www/new_www/: alembic.ini  main.py  test.py
new_www/new_www/alembic/: env.py
new_www/new_www/alembic/versions/: 19eab39c5269_articles.py  64055e1116e9_added_columns.py  af3e0c07fda9_initial_migration.py  bd46ddcbe0f2_users_table.py  d4485613ebf8_more_coluumns.py
new_www/new_www/core/: log_conf.py
new_www/new_www/database/: config.py  database.py
new_www/new_www/modules/articles/: article_model.py  article_repository.py  article_routers.py  article_schema.py
new_www/new_www/modules/files/: files_routers.py
new_www/new_www/modules/users/: __init__.py  user_model.py  user_repository.py  user_routers.py  user_schema.py
new_www/new_www/oauth/: admin.py  authentication.py  oauth2.py
new_www/new_www/users/: user_model.py  user_repository.py  user_routers.py  user_schema.py
new_www/new_www/utils/: hashing.py
new_www/tests/: test_main.py
